--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ dist: trusty
 mono: none
 dotnet: 2.1.4
 
+addons:
+  apt:
+    sources:
+    - sourceline: 'deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main'
+      key_url: 'https://packages.microsoft.com/keys/microsoft.asc'
+    packages:
+    - dotnet-sharedframework-microsoft.netcore.app-1.1.7
+
 install:
   - export DOTNET_CLI_TELEMETRY_OPTOUT=1
   - export DOTNET_SKIP_FIRST_TIME_EXPERIENCE=1
