--- a/src/Serilog.Sinks.Syslog/Serilog.Sinks.Syslog.csproj
+++ b/src/Serilog.Sinks.Syslog/Serilog.Sinks.Syslog.csproj
@@ -18,11 +18,12 @@
     <RepositoryUrl>https://github.com/IonxSolutions/serilog-sinks-syslog</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Serilog" Version="2.0.0" />
-    <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.1.1" />
+    <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
