--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,19 @@
-language: csharp
-sudo: required
-dist: trusty
-mono: none
-dotnet: 2.1.4
+matrix:
+  include:
+  - name: csharp
+    os: linux
+    dist: bionic
+    language: csharp
+    dotnet: 3.1
+    mono: none
 
-install:
-  - export DOTNET_CLI_TELEMETRY_OPTOUT=1
-  - export DOTNET_SKIP_FIRST_TIME_EXPERIENCE=1
+    env:
+      global:
+        - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+        - DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
-before_script:
-  - chmod a+x ./build.sh
+    before_script:
+      - chmod a+x ./build.sh
 
-script:
-  - ./build.sh
+    script:
+      - ./build.sh
