--- a/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
+++ b/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
@@ -2,9 +2,8 @@
   <PropertyGroup>
     <Authors>Ionx Solutions</Authors>
     <Copyright>Copyright © Ionx Solutions 2018</Copyright>
-    <TargetFrameworks>netcoreapp2.0;net462</TargetFrameworks>
+    <TargetFrameworks>net462;netcoreapp2.2;netcoreapp3.1</TargetFrameworks>
     <LangVersion>latest</LangVersion>
-    <RuntimeFrameworkVersion>2.0.5</RuntimeFrameworkVersion>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <AssemblyName>Serilog.Sinks.Syslog.Tests</AssemblyName>
     <RootNamespace>Serilog.Sinks.Syslog.Tests</RootNamespace>
@@ -19,7 +18,7 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
     <PackageReference Include="FakeItEasy" Version="4.9.2" />
-    <PackageReference Include="Serilog" Version="2.0.0" />
+    <PackageReference Include="Serilog" Version="2.5.0" />
     <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.3.0" />
   </ItemGroup>
 
