Configuration Example Using App.config
An issue was asked, #50, about using the Syslog sink from a web.config file. Serilog supports doing this by includng the `Serilog.Settings.AppSettings` package from NuGet and calling the `.ReadFrom.AppSettings()` extension method. See https://github.com/serilog/serilog/wiki/AppSettings for more details.

We will extend this example project to also include a sample `App.config` file demonstrating the usage of the `.ReadFrom.AppSettings()`.

--- a/sample/Serilog.Sinks.Syslog.ConfigSample/Serilog.Sinks.Syslog.ConfigSample.csproj
+++ b/sample/Serilog.Sinks.Syslog.ConfigSample/Serilog.Sinks.Syslog.ConfigSample.csproj
@@ -20,6 +20,8 @@
     <PackageReference Include="Microsoft.NETCore.Targets" Version="3.0.0" PrivateAssets="all" />
 
     <PackageReference Include="Serilog" Version="2.6.0" />
+
+    <PackageReference Include="Serilog.Settings.AppSettings" Version="2.2.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.16" />
