--- a/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
+++ b/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
@@ -1,49 +1,49 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <Authors>Ionx Solutions</Authors>
-    <Copyright>Copyright © Ionx Solutions 2018</Copyright>
-    <TargetFrameworks>net462;netcoreapp2.2;netcoreapp3.1</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <AssemblyName>Serilog.Sinks.Syslog.Tests</AssemblyName>
-    <RootNamespace>Serilog.Sinks.Syslog.Tests</RootNamespace>
-    <RepositoryType>git</RepositoryType>
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Shouldly" Version="3.0.2" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
-    <PackageReference Include="FakeItEasy" Version="4.9.2" />
-    <PackageReference Include="Serilog" Version="2.5.0" />
-    <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.3.0" />
-  </ItemGroup>
+    <PropertyGroup>
+        <Authors>Ionx Solutions</Authors>
+        <Copyright>Copyright © Ionx Solutions 2018</Copyright>
+        <TargetFrameworks>net6.0</TargetFrameworks>
+        <LangVersion>latest</LangVersion>
+        <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+        <AssemblyName>Serilog.Sinks.Syslog.Tests</AssemblyName>
+        <RootNamespace>Serilog.Sinks.Syslog.Tests</RootNamespace>
+        <RepositoryType>git</RepositoryType>
+        <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
-    <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="Shouldly" Version="4.1.0" />
+        <PackageReference Include="xunit" Version="2.4.2" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="FakeItEasy" Version="7.3.1" />
+        <PackageReference Include="Serilog" Version="2.11.0" />
+        <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.3.1" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Serilog.Sinks.Syslog\Serilog.Sinks.Syslog.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\src\Serilog.Sinks.Syslog\Serilog.Sinks.Syslog.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Update="Rfc3164Regex.txt" CopyToOutputDirectory="PreserveNewest" />
-    <None Update="Rfc5424Regex.txt" CopyToOutputDirectory="PreserveNewest" />
+    <ItemGroup>
+        <None Update="Rfc3164Regex.txt" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Rfc5424Regex.txt" CopyToOutputDirectory="PreserveNewest" />
 
-    <None Update="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
 
-    <Content Include="..\..\build\certs\*.p12">
-      <Visible>false</Visible>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+        <Content Include="..\..\build\certs\*.p12">
+            <Visible>false</Visible>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
 
-    <Content Include="..\..\build\certs\*.pem">
-      <Visible>false</Visible>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+        <Content Include="..\..\build\certs\*.pem">
+            <Visible>false</Visible>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 </Project>
