--- a/sample/Serilog.Sinks.Syslog.ConfigSample/Serilog.Sinks.Syslog.ConfigSample.csproj
+++ b/sample/Serilog.Sinks.Syslog.ConfigSample/Serilog.Sinks.Syslog.ConfigSample.csproj
@@ -5,7 +5,7 @@
     <Authors>Ionx Solutions</Authors>
     <Copyright>Copyright © Ionx Solutions 2018</Copyright>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net462</TargetFrameworks>
+    <TargetFrameworks>net6.0;net462</TargetFrameworks>
     <RuntimeIdentifiers>win-x86;win-x64;linux-x86;linux-x64</RuntimeIdentifiers>
     <LangVersion>latest</LangVersion>
     <AssemblyName>Serilog.Sinks.Syslog.ConfigSample</AssemblyName>
@@ -17,14 +17,14 @@
 
   <ItemGroup>
     <!-- workaround for serilog/serilog-settings-configuration/issues/196  -->
-    <PackageReference Include="Microsoft.NETCore.Targets" Version="3.0.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.NETCore.Targets" Version="5.0.0" PrivateAssets="all" />
 
-    <PackageReference Include="Serilog" Version="2.6.0" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
 
     <PackageReference Include="Serilog.Settings.AppSettings" Version="2.2.2" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.16" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <ProjectReference Include="..\..\src\Serilog.Sinks.Syslog\Serilog.Sinks.Syslog.csproj" />
   </ItemGroup>
 
