--- a/sample/Serilog.Sinks.Syslog.Sample/Serilog.Sinks.Syslog.Sample.csproj
+++ b/sample/Serilog.Sinks.Syslog.Sample/Serilog.Sinks.Syslog.Sample.csproj
@@ -5,7 +5,7 @@
     <Authors>Ionx Solutions</Authors>
     <Copyright>Copyright © Ionx Solutions 2018</Copyright>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net462</TargetFrameworks>
+    <TargetFrameworks>net6.0;net462</TargetFrameworks>
     <RuntimeIdentifiers>win-x86;win-x64;linux-x86;linux-x64</RuntimeIdentifiers>
     <LangVersion>latest</LangVersion>
     <AssemblyName>Serilog.Sinks.Syslog.Sample</AssemblyName>
@@ -16,8 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Serilog" Version="2.6.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <ProjectReference Include="..\..\src\Serilog.Sinks.Syslog\Serilog.Sinks.Syslog.csproj" />
   </ItemGroup>
 
