Correct Use of SslProtocols Enum
To address feedback given in #47, this is a breaking change for anyone using the `SyslogTcpConfig` or `SyslogLoggerConfigurationExtensions.TcpSyslog()` extension method. The `SecureProtocols` property/parameter has been replace with a simple boolean, `UseTls`. If you were previously setting the `SecureProtocols` property/parameter to a value such as `SslProtocols.Tls12`, then you would set the new `UseTls` property/parameter to `true`. If you were using `SslProtocols.None`, then you will pass in `false` for the new boolean value.

Also updated in the PR are the certificate based unit tests to cleanup/delete the private keys after they are used. Otherwise, they become orphaned on the hard drive. (That is for Windows specifically, not sure what happens on Linux.)

Lastly, the main project, Serilog.Sinks.Syslog, is set to target just the .NET Standard 2.0 framework. Because we do not have any framework specific code, this one build will allow it to be run under any .NET, on any platform, that supports .NET Standard 2.0. This include .NET Framework 4.6.2+, .NET Core2.0+, and .NET 5+, on Windows, Linux, or MacOS.

--- a/src/Serilog.Sinks.Syslog/Serilog.Sinks.Syslog.csproj
+++ b/src/Serilog.Sinks.Syslog/Serilog.Sinks.Syslog.csproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
     <Description>Fully-featured Serilog sink that logs events to remote syslog servers using UDP, TCP, and TLS over TCP, and can also use POSIX libc syslog functions to write to the local syslog service on Linux systems. Both RFC3164 and RFC5424 format messages are supported.</Description>
-    <VersionPrefix>2.0.9</VersionPrefix>
-    <Authors>Ionx Solutions</Authors>
-    <Copyright>Copyright © Ionx Solutions 2018</Copyright>
-    <TargetFrameworks>net462;netstandard2.0;netcoreapp3.1</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
+      
+    <!-- By targeting .NET Standard 2.0, an application can be written to any .NET version supported by
+    .NET Standard 2.0, as documented here:
+    https://learn.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0
+    So for example, .NET Framework 4.6.2+, .NET Core 2.0+, and .NET 5+ can use this package.
+    Since this code does not have any explicit dependencies for any of those .NET versions, there is no
+    need to have this project be multi-targeted. -->
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+      
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AssemblyName>Serilog.Sinks.Syslog</AssemblyName>
     <RootNamespace>Serilog</RootNamespace>
@@ -31,9 +35,6 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     <PackageReference Include="Serilog" Version="2.5.0" />
     <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.3.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
   </ItemGroup>
 
