Attempting to configure the AppContext switch for "Switch.System.Net.DontEnableSystemDefaultTlsVersions" using a .config file, but this time, instead of using a regular `app.config` file that will get renamed to the output assembly, since we know this is a DLL assembly and running under unit tests, we'll attempt the approach mentioned here: https://stackoverflow.com/a/74357802/8169136
Knowing that the process that runs the unit tests is "testhost.exe", that is what we have named our `.config` file as.

--- a/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
+++ b/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
@@ -37,6 +37,9 @@
     <None Update="Rfc5424Regex.txt" CopyToOutputDirectory="PreserveNewest" />
 
     <None Update="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="testhost.exe.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
 
     <Content Include="..\..\build\certs\*.p12">
       <Visible>false</Visible>
