Try the `.config` file with a name of `testhost.dll.config`, instead of `testhost.exe.config`.

--- a/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
+++ b/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
@@ -37,7 +37,7 @@
     <None Update="Rfc5424Regex.txt" CopyToOutputDirectory="PreserveNewest" />
 
     <None Update="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
-    <None Update="testhost.exe.config">
+    <None Update="testhost.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
 
