--- a/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
+++ b/test/Serilog.Sinks.Syslog.Tests/Serilog.Sinks.Syslog.Tests.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Authors>Ionx Solutions</Authors>
-    <Copyright>Copyright © Ionx Solutions 2018</Copyright>
-    <TargetFrameworks>net462;netcoreapp2.2;netcoreapp3.1;net6.0</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
+    <!-- Include a target for each framework that we want to explicitly test. There are some different behavior
+    between frameworks. For example, when handling a socket connection timeout, the exception handling logic
+    needed to be different for .NET 6.0. So it would be good to include as many frameworks here as we are
+    willing to support. -->
+    <TargetFrameworks>net462;netcoreapp2.2;netcoreapp3.1;net6.0;net7.0</TargetFrameworks>
+      
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <AssemblyName>Serilog.Sinks.Syslog.Tests</AssemblyName>
     <RootNamespace>Serilog.Sinks.Syslog.Tests</RootNamespace>
