--- a/sample/Serilog.Sinks.Syslog.ConfigSample/Serilog.Sinks.Syslog.ConfigSample.csproj
+++ b/sample/Serilog.Sinks.Syslog.ConfigSample/Serilog.Sinks.Syslog.ConfigSample.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Description>Sample Console Application</Description>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net462</TargetFrameworks>
+    <TargetFrameworks>net462;net8.0</TargetFrameworks>
     <RuntimeIdentifiers>win-x86;win-x64;linux-x86;linux-x64</RuntimeIdentifiers>
     <AssemblyName>Serilog.Sinks.Syslog.ConfigSample</AssemblyName>
     <RootNamespace>Serilog.Sinks.Syslog.ConfigSample</RootNamespace>
@@ -16,12 +16,12 @@
     <!-- workaround for serilog/serilog-settings-configuration/issues/196  -->
     <PackageReference Include="Microsoft.NETCore.Targets" Version="3.0.0" PrivateAssets="all" />
 
-    <PackageReference Include="Serilog" Version="2.6.0" />
+    <PackageReference Include="Serilog" Version="4.0.2" />
 
-    <PackageReference Include="Serilog.Settings.AppSettings" Version="2.2.2" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.16" />
+    <PackageReference Include="Serilog.Settings.AppSettings" Version="3.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <ProjectReference Include="..\..\src\Serilog.Sinks.Syslog\Serilog.Sinks.Syslog.csproj" />
   </ItemGroup>
 
